# plex-playlist-sort

./: README.md  plex-playlist-sort.py  pyproject.toml
