[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plex-playlist-sort"
version = "0.1.0"
dependencies = [
  "black",
  "mypy",
  "ruff",
]

[tool.black]
line-length = 99

[tool.mypy]
strict = true

[tool.ruff]
line-length = 99
fix = true
select = [
  "E",
  "F",
  "W",
  "C90",
  "C4",
  "I",
  "N",
  "YTT",
  "FBT",
  "B",
  "A",
  "COM",
  "ISC",
  "ICN",
  "Q",
  "SIM",
  "TID",
  "TCH",
  "ARG",
  "TD",
  "FIX",
  "ERA",
  "RUF",
  "RET",
  "RSE",
  "SLF",
]
